--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation("io.coil-kt:coil:2.4.0")
+    testImplementation "org.mockito:mockito-core:3.0.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
 }
